<resources>
    <string name="googlepaycode">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAimuJ6Fa/ZojG+PwzBdFSgtYhdLgIfh4J6UVScKyAia9OwqmC0sCzwVNda3KtckvuzMHiBVGvvJIPhZQR7Cslr4TdcAteX+CrjDFaDyJICTMh7GBBIUlcREeT10eTmNsx6aTbT3aSyxsAtZv2hc4jHMNFhhOMZwEoGs/XtEdHM5dICU7de3avHlR8E3v98iVZvk32pMhR1yqLs9Fiej4mWRyHv8n0Tm+lS/IOUhDOHj27XG/7qTUggAUIJk8oC2gqvioBnHXo44N3saWBj/FMFHai+lpKHynTelD2ebqYiQkAP2eC2ZPqmYCt4L+DMtHXxvGPMaAHy/LF0CAp9v5Q4wIDAQAB</string>
    <string name="app_name">Namol</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancle</string>
    <string name="back">Back</string>
    <string name="copy_success">Copy successfully,go to share your link !</string>
    <string name="go_on">Go on</string>
    <string name="next_step">Next step</string>
    <string name="enter_keyword">Enter keyword to search video resource</string>
    <string name="more">More</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="select_all">Select all</string>
    <string name="delete">Delete</string>
    <string name="exit">Exit</string>
    <string name="report">Report</string>
    <string name="tip">Tip</string>
    <string name="the_final_interpretation_right_belongs_to_namol">The final interpretation right belongs to Namol</string>
    <string name="login_means"><![CDATA[Login means you accept our <User terms of use>]]></string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="please_enter_phone_number">Please enter phone number/account</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="forget_password">Forget password?</string>
    <string name="namolwants_to_login_by_facebook">\"Namol\" wants to login by Facebook</string>
    <string name="select_country_region">Select country/region</string>
    <string name="send_verification_code">Send verification code</string>
    <string name="click_the_top_button_your_phone_will_receiv">Click the top button,your phone will receive a message from Namol</string>
    <string name="sixdigit_verification_code_has_been_sent">Six-digit verification code has been sent</string>
    <string name="didn_receive_the_message">Didn\'t receive the message ? Please try in 59s</string>
    <string name="click_it_and_send_again">Click it and send again</string>
    <string name="set_your_password">Set your password</string>
    <string name="input_624_digit_numbers_and_letters">Input 6–24 digit  numbers and letters</string>

    <string name="all">All</string>
    <string name="home_page">Home page</string>
    <string name="most_played">Most played</string>
    <string name="latest">Latest</string>
    <string name="most_liked">Most liked</string>
    <string name="no_pixelation">No pixelation</string>
    <string name="european">European</string>
    <string name="big_boobs">Big boobs</string>
    <string name="milf">Milf</string>
    <string name="pure">Pure</string>
    <string name="anime">Anime</string>
    <string name="masturbation">Masturbation</string>
    <string name="today_hot">Today\'s hot</string>
    <string name="big_ass">Big ass</string>
    <string name="role_play">Role play</string>
    <string name="japanese">Japanese</string>
    <string name="group">Group</string>
    <string name="bathroom">Bathroom</string>
    <string name="small_boobs">Small boobs</string>
    <string name="literary_film">Literary film</string>
    <string name="it">IT</string>
    <string name="art">Art</string>
    <string name="math">Math</string>
    <string name="programming">Programming</string>
    <string name="science">Science</string>
    <string name="english">English</string>
    <string name="business">Business</string>
    <string name="media">Media</string>
    <string name="music">Music</string>
    <string name="society">Society</string>
    <string name="find">Find</string>
    <string name="my">My</string>
    <string name="film_watch_remaining_times_today">"Film watch remaining times today: 0/5 "</string>
    <string name="how_to_increase_film_watch_times">How to increase film watch times?</string>
    <string name="please_login_first">Please login first</string>
    <string name="feedback_and_suggestions">Feedback and suggestions</string>
    <string name="my_feedback">My feedback</string>
    <string name="feedback_type">Feedback type</string>
    <string name="fail_to_play">Fail to play</string>
    <string name="play_frozen">Play frozen</string>
    <string name="error_categories">Error categories</string>
    <string name="inaccurate_search">Inaccurate search</string>
    <string name="incomplete_video">Incomplete video</string>
    <string name="other">Other</string>
    <string name="feedback_details">Feedback details</string>
    <string name="please_explain_your">Please explain your problem more details, so we can help you in time(10-100words)</string>
    <string name="feedback_time">Feedback time</string>
    <string name="reply">Reply</string>
    <string name="my_favorite">My favorite</string>
    <string name="open_vip_add_it_to_your_favorite">Open VIP, add it to your \"Favorite\"</string>
    <string name="notice">Notice</string>
    <string name="notice_details">Notice details</string>
    <string name="setting">Setting</string>
    <string name="account_management">Account management</string>
    <string name="clear_cache">Clear cache</string>
    <string name="current_version">Current version</string>

    <string name="change_avatar">Change avatar</string>
    <string name="nickname">Nickname</string>
    <string name="not_set">Not set</string>
    <string name="phone_number">Phone number</string>
    <string name="modify_password">Modify password</string>
    <string name="bind_account_to_phone_number_to_modify_password">Bind account to phone number to modify password</string>
    <string name="you_may_also_like">You may also like..</string>
    <string name="open_vip">Open VIP</string>
    <string name="carefree_watch_per_day">Carefree watch per day</string>
    <string name="unlimited_video_watch">Unlimited video watch</string>
    <string name="watch_and_enjoy_every_day">Watch and enjoy every day</string>
    <string name="vip_identity_sign">VIP identity sign</string>
    <string name="exculsive_and_valued">Exculsive and valued</string>
    <string name="get_private_customer_service">Get private customer service</string>
    <string name="your_demand_will_be_satisfied_the_first_time">Your demand will be satisfied the first time</string>
    <string name="inivite_friends_get_one_month_vip_for_free">Inivite friends, get one-month VIP for free</string>
    <string name="click_to_check">Click to check</string>
    <string name="original_price_2000">Original price $2000</string>
    <string name="limited_time_offer_199.99">Limited  time offer $199.99</string>
    <string name="buy_once">Buy once</string>
    <string name="for_enternity">For enternity</string>
    <string name="invite_friend_to_get_vip_card_for_free">Invite friend to get VIP card for free</string>
    <string name="invite_3_people_only_invite_5_people_for_free">Invite 3 people ,only $4.99; invite 5 people, for free !</string>
    <string name="your_invitation_code">Your invitation code</string>
    <string name="invite_friends_now">Invite friends now</string>
    <string name="monthly_vip_original_price1499">Monthly VIP original price$14.99</string>
    <string name="invite_3_friends_only_499_to_be_vip_this_month">Invite 3 friends, only $4.99 to be VIP this month</string>
    <string name="invite_5_friends_only_0.00_to_be_vip_this_month">Invite 5 friends, only $0.00 to be VIP this month</string>
    <string name="it_means_that_invited_friends_must_register_successfully">"It means that invited friends must register successfully, "</string>
    <string name="when_you_invite_3_or_5_friends">When you invite 3 or 5 friends</string>
    <string name="to_get_access_to_vip_discount">to get access to VIP discount</string>
    <string name="please_click_monthly_vip_in_purchase_vip">please click \"Monthly VIP\" in \"Purchase VIP\"</string>
    <string name="it_will_automatically_reduce_the_price_to_499_or_000">it will automatically reduce the price to $4.99 or $0.00</string>
    <string name="copy_successfully_go_to_share_your_link">Copy successfully,go to share your link !</string>
    <string name="don_forget_to_remind_your_friends_to_fill_invitation_code_while_reisgter_account">Don\'t forget to remind your friends to fill Invitation code while reisgter account</string>

    <string name="namol_know_more_enjoy_all">Namol- know more, enjoy all</string>
    <string name="see_the_world_at_home_enjoy_the_real_happiness">See the world at home, enjoy the real happiness</string>

    <string name="namol_worldwide_people_favorite_online_class_platform">Namol,worldwide people\' favorite online class platform</string>
    <string name="rich_resourse_cover_more_than_20_fields_including_art_culture_etc">Rich resourse, cover more than 20 fields including art, culture etc</string>
    <string name="high_quality_experience_record_all_you_like">High-quality experience,record all you like</string>
    <string name="fast_reply_when_the_feedback_is_got_we_will_handle_it_the_first_time">Fast reply，when the feedback is got, we will handle it the first time</string>
    <string name="want_to_log_out">Fast reply，when the feedback is got, we will handle it the first time</string>


    <string name="user_agreement">User Agreement</string>
    <string name="next">next</string>
    <string name="feedback">Feedback</string>
    <string name="google_pay_net_fail">NetWork Wrong!</string>
    <string name="charge_success">Charge Success</string>
    <string name="charge_fail">Charge Fail</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password_again">New password again</string>
    <string name="enter_the_new_password">Enter the new password</string>
    <string name="skip">skip</string>

</resources>
