<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#222222"
    >

    <include
        android:id="@+id/include9"
        layout="@layout/include_top_toolbar"/>

    <LinearLayout

        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#2A2A2A"
        app:layout_constraintTop_toBottomOf="@+id/include9">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:paddingBottom="18dp"
            android:paddingTop="18dp"
            android:text="@string/old_password"
            android:textColor="@color/white"
            android:textSize="16sp"/>



            <EditText
                android:layout_marginEnd="10dp"
                android:id="@+id/et_old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:gravity="end|center_vertical"
                android:hint="Enter the old password"
                android:inputType="textPassword"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textColorHint="#888888"
                android:textSize="14sp"/>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2A2A2A"
        app:layout_constraintTop_toBottomOf="@+id/ll2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/confirm_new_password"
            android:textColor="@color/white"
            android:textSize="12sp"/>



            <EditText
                android:layout_marginEnd="10dp"
                android:id="@+id/et_new_sure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:gravity="end|center_vertical"
                android:hint="@string/new_password_again"
                android:inputType="textPassword"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textColorHint="#888888"
                android:textSize="14sp"
                />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:background="#2A2A2A"
        app:layout_constraintTop_toBottomOf="@+id/ll1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:paddingBottom="18dp"
            android:paddingTop="18dp"
            android:text="@string/new_password"
            android:textColor="@color/white"
            android:textSize="16sp"/>


        <EditText
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:gravity="end|center_vertical"
            android:layout_weight="1"
            android:id="@+id/et_new"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:ems="10"
            android:hint="@string/enter_the_new_password"
            android:inputType="textPassword"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textColorHint="#888888"
            android:textSize="14sp"
          />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:padding="10dp"
        android:text="@string/forget_password"
        android:textColor="#888888"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>


        <include
            android:id="@+id/submit"
            layout="@layout/include_submit"/>


</android.support.constraint.ConstraintLayout>