<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include"
        layout="@layout/include_top_toolbar_iv" />


    <LinearLayout
        android:id="@+id/ll_account_management"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/textbackcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:text="@string/account_management"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_next" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_clear_cache"
        android:background="@color/textbackcolor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_account_management">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:text="@string/clear_cache"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:text="26.25 MB"
            android:textColor="#888888"
            android:textSize="16sp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_next" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_version"
        android:background="@color/textbackcolor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_clear_cache">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:text="@string/current_version"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_next" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_user_agreement"
        android:background="@color/textbackcolor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_version">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:text="@string/user_agreement"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_next" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>